dynamic-routing/resources/bar.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bar
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: bar
  namespace: bar
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: apps-config
  to:
    - group: gloo.solo.io
      kind: Upstream
---
apiVersion: v1
kind: Service
metadata:
  name: bar
  labels:
    app: bar
    service: bar
  namespace: bar
spec:
  ports:
    - name: http
      port: 9080
      targetPort: 9080
  selector:
    app: bar
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar
  namespace: bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar
      version: v1
  template:
    metadata:
      labels:
        app: bar
        version: v1
    spec:
      serviceAccountName: bar
      containers:
        - name: bar
          image: australia-southeast1-docker.pkg.dev/solo-test-236622/apac/simple-service:v0.1.0
          imagePullPolicy: IfNotPresent
          args:
            - "-port"
            - "9080" 
          ports:
            - containerPort: 9080
