dynamic-routing/resources/extproc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ext-proc
---
apiVersion: v1
kind: Service
metadata:
  name: ext-proc-routing
  namespace: ext-proc
  labels:
    app: ext-proc-routing
spec:
  ports:
    - port: 9080
      targetPort: 9080
      protocol: TCP
  selector:
    app: ext-proc-routing
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ext-proc-routing
  namespace: ext-proc
spec:
  selector:
    matchLabels:
      app: ext-proc-routing
  replicas: 1
  template:
    metadata:
      labels:
        app: ext-proc-routing
    spec:
      containers:
        - name: ext-proc-log-routing
          image: australia-southeast1-docker.pkg.dev/solo-test-236622/apac/ext-proc-routing-decision:v0.1.0
          imagePullPolicy: IfNotPresent
          args:
            - "--port"
            - "9080"
          ports:
            - containerPort: 9080
