dynamic-routing/resources/foo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foo 
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: foo
  namespace: foo
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: apps-config 
  to:
    - group: gloo.solo.io
      kind: Upstream
---
apiVersion: v1
kind: Service
metadata:
  name: foo
  labels:
    app: foo
    service: foo
  namespace: foo
spec:
  ports:
    - name: http
      port: 9080
      targetPort: 9080
  selector:
    app: foo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
  namespace: foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo
      version: v1
  template:
    metadata:
      labels:
        app: foo
        version: v1
    spec:
      serviceAccountName: foo
      containers:
        - name: foo
          image: australia-southeast1-docker.pkg.dev/solo-test-236622/apac/simple-service:v0.1.0
          imagePullPolicy: IfNotPresent
          args:
            - "-port"
            - "9080"
          ports:
            - containerPort: 9080
